update dependencys and code